# ChangeLog for net-libs/libtorrent
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libtorrent/ChangeLog,v 1.175 2014/08/10 20:50:03 slyfox Exp $

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> libtorrent-0.12.5.ebuild:
  QA: drop trailing '.' from DESCRIPTION

*libtorrent-0.13.4 (10 Jun 2014)

  10 Jun 2014; Victor Ostorga <vostorga@gentoo.org> +libtorrent-0.13.4.ebuild:
  Version bump, bug #509932

*libtorrent-0.13.3 (22 Mar 2013)

  22 Mar 2013; Patrick Lauer <patrick@gentoo.org> +libtorrent-0.13.3.ebuild:
  Bump

  21 Feb 2013; Zac Medico <zmedico@gentoo.org> libtorrent-0.13.2.ebuild:
  Add ~arm-linux keyword.

  10 Sep 2012; Christoph Junghans <ottxor@gentoo.org> libtorrent-0.13.2.ebuild:
  added prefix keywords

*libtorrent-0.13.2 (09 Jun 2012)

  09 Jun 2012; Justin Lecher <jlec@gentoo.org> +libtorrent-0.13.2.ebuild:
  Version BUmp, move to EAPI=4

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> libtorrent-0.12.5.ebuild,
  libtorrent-0.12.6.ebuild, libtorrent-0.12.7.ebuild,
  libtorrent-0.12.7-r1.ebuild, libtorrent-0.12.9.ebuild,
  libtorrent-0.13.1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

*libtorrent-0.13.1 (08 Apr 2012)

  08 Apr 2012; Stanislav Ochotnicky <sochotnicky@gentoo.org>
  -libtorrent-0.13.0.ebuild, +libtorrent-0.13.1.ebuild:
  Version bump (#411041)

  10 Mar 2012; Brent Baude <ranger@gentoo.org> libtorrent-0.12.9.ebuild:
  Marking libtorrent-0.12.9 ppc for bug 389817

*libtorrent-0.13.0 (08 Mar 2012)

  08 Mar 2012; Patrick Lauer <patrick@gentoo.org> +libtorrent-0.13.0.ebuild:
  Bump for #396243

  07 Mar 2012; Brent Baude <ranger@gentoo.org> libtorrent-0.12.9.ebuild:
  Marking libtorrent-0.12.9 ppc64 for bug 389817

  11 Dec 2011; Markus Meier <maekke@gentoo.org> libtorrent-0.12.9.ebuild:
  x86 stable, bug #389817

  28 Nov 2011; Tony Vroon <chainsaw@gentoo.org> libtorrent-0.12.9.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Sarubbo &