@@ -4,10 +4,10 @@ DESCRIPTION=BitTorrent library written in C++ for *nix
 EAPI=4
 HOMEPAGE=http://libtorrent.rakshasa.no/
 IUSE=debug ipv6 ssl
-KEYWORDS=~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~x64-solaris
+KEYWORDS=~amd64 ~arm hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~x64-solaris
 LICENSE=GPL-2
 RDEPEND=>=dev-libs/libsigc++-2.2.2:2 ssl? ( dev-libs/openssl )
 SLOT=0
 SRC_URI=http://libtorrent.rakshasa.no/downloads/libtorrent-0.13.3.tar.gz
 _eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=fd64fc7ba468b425b5a0a9daa153b9f7
+_md5_=d28bd9c622ce36d7f6b3741e4a7d5117
