@@ -4,10 +4,10 @@ DESCRIPTION=BitTorrent Client using libtorrent
 EAPI=4
 HOMEPAGE=http://libtorrent.rakshasa.no/
 IUSE=daemon debug ipv6 selinux test xmlrpc
-KEYWORDS=~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~x64-solaris
+KEYWORDS=~amd64 ~arm hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~x64-solaris
 LICENSE=GPL-2
 RDEPEND=~net-libs/libtorrent-0.13.3 >=dev-libs/libsigc++-2.2.2:2 >=net-misc/curl-7.19.1 sys-libs/ncurses selinux? ( sec-policy/selinux-rtorrent ) xmlrpc? ( dev-libs/xmlrpc-c ) daemon? ( app-misc/screen )
 SLOT=0
 SRC_URI=http://libtorrent.rakshasa.no/downloads/rtorrent-0.9.3.tar.gz
 _eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=9367973d0559ee0005c6937bf4d89062
+_md5_=f2a2af2d77232e8dcd5939f63d26b897
