@@ -18,15 +18,15 @@ DIST rtorrent-0.9.4.tar.gz 601913 SHA256 bc0a2c1ee613b68f37021beaf4e64a9252f91ed
 EBUILD rtorrent-0.8.9.ebuild 1875 SHA256 92b53a9cee44f872a3f2b076c2d295472d487caf62c60c031a57fc2b507592df SHA512 634fcdbe0ce29e4777fb4ce1609a28ad2f04f4c420318f7825aed55b5b51287c6a28b445b4a213c9d0c7f65024b7fb8b07fa6bdab7049356413ba159eb6447cb WHIRLPOOL bd781524617c339217c28cec34b749510d91461eb54d2e85e7986085a5455c67f7376d886e58af701f1f0ff5caaad4ce969951d3f56ace1c3b6928f33b4f5564
 EBUILD rtorrent-0.9.1.ebuild 1350 SHA256 ea68ad2cdc1138a6081422c76edb933ce6073ba908aa9e0a1960d7e202a22151 SHA512 48811d4e43975521226f3c9be351a805595544e624eca64e6fedefe31266da67fbfe27bed466590c972d09c30575f0a68e6bc1f05225b5b51b5709cc66bb1626 WHIRLPOOL f328ee07b2e5ddd1d72e48994bedd01d7cbd2d96f26738301fabf373e9eca5662cb23d087e9b556ce017454ab1e59ab070d8a78155f2521ce5b1c66ec1f5a072
 EBUILD rtorrent-0.9.2.ebuild 1482 SHA256 c9396d9f00b5b2f5bb59887d92034bc0f29eb8acfe250a0c50c5acbd3270704e SHA512 4d20bb0385ce10620d933924bd826a832b6f68f316be166720e97d82228ce2158cee5eb37789b3660750ad0aa64abf01a2d354fa38fb3ccb13ced23eeeb08992 WHIRLPOOL 996f3e8832cbd440b5dbe91e6f255f8cec4b13c146eebf2005e0ab763c53fc8b3a288bc193d47dfdc4040b7fdce51a09e0e036395e224c4483b4bc48b6a164ba
-EBUILD rtorrent-0.9.3.ebuild 1557 SHA256 efd9b65bbb3f7af6e6a160f93681c528e8edc3bf67d490c1c30d0d17e583d495 SHA512 985dfaa3937aa8111f04e1b7ca4932ebd7c1237193cca430ebae43a60c950823554b450e0339ff4d4de96fdaa54884d7fc1e134100aeef364089cea136539d32 WHIRLPOOL 78ec0709729b69915299ff80ebbd513029d41e0142f59080c6cf1fad37c40656435a4e935a5731158e7cb28bcdfdc415881c2f7582747d455105ea5b568c88dd
+EBUILD rtorrent-0.9.3.ebuild 1554 SHA256 810879000c5c39ab6144b2ba277d3217ebfae1f955d24233839132889a01c02b SHA512 2e07f8f2bf28ff410c741a81eec533b52097ccd938888c873f1a25225b0f2d965235dfd5b4e74873139b9ef92888924963f00e877637e5d6d7bfed8d1bdb91c3 WHIRLPOOL 1d1f78ccaf20e339a8e44a1d51586fa325e6151075a31108ab48296c6c00e11f41c099074f4a1e0e82129bfe1b31e7c6ad165d913d404b9e9238a947c1d8ad64
 EBUILD rtorrent-0.9.4-r1.ebuild 1646 SHA256 f79372204f298861181dd151849c8acd04ae6151abfab880cb048311a8a106be SHA512 915891cf4789368a6bd1e2936f9c5905759ee2bb429a1a70f2e5ad7743f87efa64926db4470333e30787d6123b078c11946b17aecc200a0b7414c13c5cccffda WHIRLPOOL 607893f3c299d59ef4b3dc0a1a7d2ee07a5572c7089cdd3a50e7d503c8e1c946336e70509abf26cad1c25199337db352e7ed4e762db7f908627b18bc057cf699
 EBUILD rtorrent-0.9.4.ebuild 1564 SHA256 5cc8cfda25bb7fc8c18e2127a314da831e44eabd60711a3ca0b3adadfcc9d654 SHA512 f801b5db1cdb443235936bccba9185c2cf7db386d48f58d2bcbf7c9f9446eda1cd7ca5ec62f0b1193b8b92b40caaa78463f5a5b0e6ee4028aa85885e30fc5771 WHIRLPOOL 8c0b1d37c4637c3dc186d114f2be640524fded5eac6e9b17f71a11f9f501ed736ca27621d8a927979a72f65389890d38765a9fa12a3054f50f7e4df799fcc424
-MISC ChangeLog 28479 SHA256 3b5157904a655b32b0b126d35e8065cd3aaba7537c0847783573f26918196983 SHA512 c538ab8375eee02017a2bb9b30642ceaf4a596dcf345d2cee8e01edfb595d7a6a637fceabfb6dab1d28a0837e9d924bb88c5ccc75ca273552cae5f9df59cbb98 WHIRLPOOL 75ea1c27cc47836eb551b7bffb1a43544d5a48e352cc68f615e99b86dc7e6eeb25e08d07066540f7f6b359c87956ea6069bd9d81d789e1edcc1dfe23b962d03f
+MISC ChangeLog 28581 SHA256 2196043d79196d5c0e9be1b94bbac1a77aa0b1080dfeeab1232c8821890170b2 SHA512 224e9376dfb8e5034b4356cc9c4fb51a7fe294e66f05236db09acb3765319c63c92561f66455fc781426d332b2a10d3201003b3bd3910fe2c030a8da6f36687b WHIRLPOOL b87fa44b79c93d4b14bd324e4f9f4f3278abfd6768d4f16a228bbb8382de22b7164e50a8b4c3a925130a65abb1a53641931f37f08df5b9213ff774f0269aff60
 MISC metadata.xml 461 SHA256 db7942b39f614d72ff07b2ca64acbddd975cc016761d0037eb9edf786a4b295d SHA512 3d458e127eec25eeeb9798411adb32add57a13b908d66ecf6b2c414df3cef9d65322c46a103616ed423554b052e52701af7a34a5157438661d88f85fce52f6f0 WHIRLPOOL 395cc9fe276a67aa7d0d7e0a04f27c85d9e16c17d872e85bd240fd149c8f36497eb14958a810c461f8e94056e44817c1d169f37c1964fa91bb0000ac54038139
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlPtyqcACgkQCaWpQKGI+9S7igCfcwmNpbCRop6k+HC0TAAQQ20d
-IO0An3kyHSgRNUtwRFcjaI1bALoWXBfc
-=cBmL
+iEYEAREIAAYFAlQR618ACgkQVWmRsqeSphNmMACeMu8tjPCJ0XxsqZtWU7/M3au1
+NvYAn3BsqZ3eof+v4IHTj6wLIcTMvCpm
+=tyBp
 -----END PGP SIGNATURE-----
