@@ -1,6 +1,9 @@
 # ChangeLog for net-p2p/rtorrent
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/rtorrent/ChangeLog,v 1.187 2014/08/15 08:53:58 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/rtorrent/ChangeLog,v 1.188 2014/09/11 18:35:09 jer Exp $
+
+  11 Sep 2014; Jeroen Roovers <jer@gentoo.org> rtorrent-0.9.3.ebuild:
+  Stable for HPPA (bug #499474).
 
   15 Aug 2014; Pacho Ramos <pacho@gentoo.org> files/rtorrentd_at.service:
   Fix typo (#513296)
